# dewey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
commands/: brief.md  checkin.md  recall.md
dewey/: __init__.py  autostub.py  brain3d.py  brief.py  cli.py  compress.py  connectors.json  connectors.py  core.py  dashboard.py  graph.py  health.py  image_stub.py  live_stats.py  mcp_server.py  ocr.py  research.py  state.py
docs/: BENCHMARK.md  DEWEY-GRAPHIFY-MELD.md  MANTRA.md  RECONCILIATION-BRIEF.md
hooks/: README.md  dewey-autostub-stop.sh  ivon-paper-trail.sh  ivon-session-start.sh
skills/dewey-image/: SKILL.md
skills/dewey-ocr/: SKILL.md
skills/dewey-research/: SKILL.md
skills/self-reflect/: SKILL.md
tests/: test_autostub.py  test_brain3d.py  test_brief.py  test_call.py  test_checkout.py  test_compress.py  test_connectors.py  test_consolidate.py  test_graph.py  test_health.py  test_image.py  test_live_stats.py  test_merge.py  test_micronise.py  test_ocr.py  test_reference.py  test_research.py  test_scrub.py  test_state.py  test_tags.py
