[project]
name = "dewey"
version = "0.1.0"
description = "A Dewey-decimal memory librarian for Claude Code — map, date, and de-duplicate stray .md memory silos."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ivon Harris" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
dewey = "dewey.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dewey"]
