[project]
name = "dewey"
version = "0.8.0"
description = "A Dewey-decimal memory librarian for Claude Code — map, date, and de-duplicate stray .md memory silos."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ivon Harris" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
vault = ["cryptography>=42"]

[project.scripts]
dewey = "dewey.cli:main"
dewey-mcp = "dewey.mcp_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dewey"]

[tool.setuptools.package-data]
dewey = ["connectors.json"]
