[project]
name = "dewey"
version = "0.16.1"
description = "A Dewey-decimal memory librarian for Claude Code — map, date, and de-duplicate stray .md memory silos."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ivon Harris" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
vault = ["cryptography>=42"]
compress = ["supercompress>=0.5"]
ocr = ["pytesseract>=0.3.10", "pypdf>=4.0", "pillow>=10.0"]
image = ["pillow>=10.0"]
# `dewey research` needs no extra — it uses the stdlib (urllib) + a PERPLEXITY_API_KEY.

[project.scripts]
dewey = "dewey.cli:main"
dewey-mcp = "dewey.mcp_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dewey"]

[tool.setuptools.package-data]
dewey = ["connectors.json"]
